# opencv_wrapper

./: CMakeLists.txt  README.md  exports.h  image_operations.h  mat.h  math.h
src/: image_operations.cpp  mat.cpp  mat_impl.h  math.cpp  math_impl.h
